--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,11 @@ repos:
     -   id: pyupgrade
         language_version: python3
         args: [--py37-plus]
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.931'  # Use the sha / tag you want to point at
+    hooks:
+    -   id: mypy
+        language_version: python3
+        additional_dependencies:
+          - types-requests
