--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -58,3 +58,5 @@ jobs:
       - id: run
         name: Run tests
         run: make test
+        env:
+            BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
