--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -60,3 +60,37 @@ jobs:
         run: make test
         env:
             BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
+
+  test-build:
+    name: Build Python package
+    runs-on: ubuntu-latest
+    needs: [test-python]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install pipenv
+        run: pipx install pipenv
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+          cache: 'pipenv'
+
+      - run: pipenv install --dev --pre
+
+      - id: build
+        name: Build release
+        run: make build-release
+
+      - id: check
+        name: Check release
+        run: make check-release
+
+      - id: save
+        name: Save artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-release-${{ github.run_number }}
+          path: ./dist
+          if-no-files-found: error
