Try it hardcoded the first time around

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ mypy = "*"
 pandas = "*"
 jupyterlab = "*"
 twine = "*"
+"keyrings.google-artifactregistry-auth" = "*"
+setuptools-scm = "*"
 
 [requires]
 python_version = "3.7"
