--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -91,6 +91,53 @@ jobs:
         name: Save artifact
         uses: actions/upload-artifact@v2
         with:
-          name: test-release-${{ github.run_number }}
+          name: release-${{ github.run_number }}
           path: ./dist
           if-no-files-found: error
+
+  tag-release:
+    name: Tagged Google Artifact Registry release
+    runs-on: ubuntu-latest
+    needs: [test-build]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: Install pipenv
+        run: pipx install pipenv
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+          cache: 'pipenv'
+
+      - run: pipenv install --dev --pre
+
+      - id: fetch
+        name: Fetch artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: release-${{ github.run_number }}
+          path: ./dist
+
+      - id: auth-gcloud
+        name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          token_format: access_token
+          workload_identity_provider: projects/990992937017/locations/global/workloadIdentityPools/warn-pool/providers/warn-provider
+          service_account: warn-service-account@big-local-news-267923.iam.gserviceaccount.com
+          access_token_lifetime: 300s
+
+      - name: Login to Google Artifact Registry
+        uses: docker/login-action@v1
+        with:
+          registry: us-west2-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth-gcloud.outputs.access_token }}
+
+      - id: release
+        name: Release
+        run: pipenv run twine upload --repository-url https://us-west2-python.pkg.dev/big-local-news-267923/warn-transformer/ dist/*
