--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -110,10 +110,10 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: '3.9'
           cache: 'pipenv'
 
-      - run: pipenv install --dev --pre
+      - run: pipenv install twine
 
       - id: fetch
         name: Fetch artifact
