--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -100,6 +100,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-build]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
       - uses: actions/setup-python@v2
         with:
