--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -130,7 +130,7 @@ jobs:
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v1
         with:
-          registry: us-west2-docker.pkg.dev
+          registry: us-west2-python.pkg.dev
           username: oauth2accesstoken
           password: ${{ steps.auth-gcloud.outputs.access_token }}
 
