What if we log here too

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -160,6 +160,10 @@ jobs:
         name: Install Python dependencies
         run: pipenv install --dev --pre
 
+      - id: print-version
+        name: Log version
+        run: pipenv run python setup.py --version
+
       - id: fetch
         name: Fetch artifact
         uses: actions/download-artifact@v2
