--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -88,13 +88,15 @@ jobs:
         env:
             BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
 
-  test-build:
+  build:
     name: Build Python package
     runs-on: ubuntu-latest
     needs: [test-python]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+         fetch-depth: 0
 
       - id: install-pipenv
         name: Install pipenv
@@ -134,7 +136,7 @@ jobs:
   tag-release:
     name: Tagged Google Artifact Registry release
     runs-on: ubuntu-latest
-    needs: [test-build]
+    needs: [build]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
 
     permissions:
