--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -95,23 +95,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - id: install
+        name: Install Python, pipenv and Pipfile packages
+        uses: palewire/install-python-pipenv-pipfile@v2
         with:
-         fetch-depth: 0
-
-      - id: install-pipenv
-        name: Install pipenv
-        run: pipx install pipenv
-
-      - id: install-python
-        name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-          cache: 'pipenv'
-
-      - id: install-python-dependencies
-        name: Install Python dependencies
-        run: pipenv install --dev --pre
+          python-version: 3.7
 
       - id: print-version
         name: Log version
