--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -128,7 +128,7 @@ jobs:
           if-no-files-found: error
 
   tag-release:
-    name: Tagged Google Artifact Registry release
+    name: PyPI release
     runs-on: ubuntu-latest
     needs: [build]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
