--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -25,7 +25,7 @@ jobs:
 
       - id: install-python-dependencies
         name: Install Python dependencies
-        run: pipenv sync --dev
+        run: pipenv install --dev
 
       - id: lint
         name: Lint
