--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ sphinx = "*"
 sphinx-autobuild = "*"
 myst-parser = "*"
 sphinxcontrib-napoleon = "*"
+typing-extensions = "*"
 
 [requires]
 python_version = "3.9"
