--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ sphinx = "*"
 sphinx-autobuild = "*"
 myst-parser = "*"
 sphinxcontrib-napoleon = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.9"
