If it wants packaging, give it packaging

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ myst-parser = "*"
 sphinxcontrib-napoleon = "*"
 types-requests = "*"
 sphinx-click = "*"
+packaging = "*"
 
 [requires]
 python_version = "3.9"
