--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,6 @@ bln = "*"
 marshmallow = "*"
 click = "*"
 jellyfish = "*"
-certifi = "*"
 
 [dev-packages]
 pre-commit = "*"
@@ -28,6 +27,8 @@ myst-parser = "*"
 sphinxcontrib-napoleon = "*"
 types-requests = "*"
 sphinx-click = "*"
+zipp = "*"
+certifi = "*"
 
 [requires]
 python_version = "3.9"
