--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -80,7 +80,7 @@ jobs:
 
       - id: install-python-dependencies
         name: Install Python dependencies
-        run: pipenv install --python `which python` --skip-lock pytest pytest-vcr bln marshmallow click jellyfish certifi
+        run: pipenv install --python `which python` --skip-lock pytest pytest-vcr bln marshmallow click jellyfish requests certifi
 
       - id: run
         name: Run tests
