--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,13 +23,13 @@ repos:
         language_version: python3
 
 -   repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 22.6.0
     hooks:
     -   id: black
         language_version: python3
 
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.0
+    rev: v1.12.1
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black]
