--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -114,7 +114,7 @@ jobs:
         name: Install Python dependencies
         run: |
           pipenv install --dev --skip-lock
-          pipenv pip install certifi
+          pipenv run pip install certifi importlib_metadata
 
       - id: build
         name: Build release
