--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -57,39 +57,39 @@ jobs:
         name: Mypy
         run: make mypy
 
-  test-python:
-    strategy:
-      matrix:
-        python: ["3.7", "3.8", "3.9", "3.10"]
-    name: Test Python code
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - id: install-python
-        name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
-          cache: 'pipenv'
-
-      - id: install-pipenv
-        name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-
-      - id: install-python-dependencies
-        name: Install Python dependencies
-        run: |
-          pipenv install --python `which python` --skip-lock pytest pytest-vcr bln marshmallow click jellyfish requests certifi importlib_metadata
-          pipenv run pip install certifi importlib_metadata
-        shell: bash
-
-      - id: run
-        name: Run tests
-        run: make test
-        env:
-            BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
+          #  test-python:
+          #    strategy:
+          #      matrix:
+          #        python: ["3.7", "3.8", "3.9", "3.10"]
+          #    name: Test Python code
+          #    runs-on: ubuntu-latest
+          #    steps:
+          #      - name: Checkout
+          #        uses: actions/checkout@v3
+          #
+          #      - id: install-python
+          #        name: Install Python
+          #        uses: actions/setup-python@v4
+          #        with:
+          #          python-version: ${{ matrix.python }}
+          #          cache: 'pipenv'
+          #
+          #      - id: install-pipenv
+          #        name: Install pipenv
+          #        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
+          #
+          #      - id: install-python-dependencies
+          #        name: Install Python dependencies
+          #        run: |
+          #          pipenv install --python `which python` --skip-lock pytest pytest-vcr bln marshmallow click jellyfish requests certifi importlib_metadata
+          #          pipenv run pip install certifi importlib_metadata
+          #        shell: bash
+          #
+          #      - id: run
+          #        name: Run tests
+          #        run: make test
+          #        env:
+          #            BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
 
   build:
     name: Build Python package
