--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ flake8-docstrings = "*"
 pytest = "*"
 pytest-vcr = "*"
 pytest-cov = "*"
-mypy = "*"
+mypy = "==1.3.0"
 twine = "*"
 setuptools-scm = "*"
 sphinx = "*"
