--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ flake8-docstrings = "*"
 pytest = "*"
 pytest-vcr = "*"
 pytest-cov = "*"
-mypy = "==1.2.0"
+mypy = "*"
 twine = "*"
 setuptools-scm = "*"
 sphinx = "*"
