--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 bln = ">=2.3.0"
 marshmallow = "*"
-click = "*"
+click = "8.1.3"       # https://github.com/pallets/click/issues/2558
 jellyfish = "*"
 
 [dev-packages]
