--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-bln = ">=2.3.0"
+bln = "*"
 marshmallow = "*"
 click = "8.1.3"       # https://github.com/pallets/click/issues/2558
 jellyfish = "*"
 
 [dev-packages]
-pre-commit = "*"
 flake8 = "*"
 black = "*"
 flake8-bugbear = "*"
@@ -29,6 +28,7 @@ types-requests = "*"
 sphinx-click = "*"
 zipp = "*"
 certifi = "*"
+pre-commit = "*"
 
 [requires]
 python_version = "3.9"
