--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,6 +40,7 @@ repos:
     hooks:
     -   id: isort
         language_version: python3
+        args: [--profile=black]
 
 -   repo: https://github.com/PyCQA/flake8
     rev: 3.9.2
