--- a/Pipfile
+++ b/Pipfile
@@ -10,14 +10,14 @@ click = "8.1.3"       # https://github.com/pallets/click/issues/2558
 jellyfish = "*"
 
 [dev-packages]
-flake8 = "*"
-black = "*"
+flake8 = "==6.1.0"
+black = "==24.3.0"
 flake8-bugbear = "*"
 flake8-docstrings = "*"
 pytest = "*"
 pytest-vcr = "*"
 pytest-cov = "*"
-mypy = "*"
+mypy = "==1.9.0"
 twine = "*"
 setuptools-scm = "*"
 sphinx = "*"
@@ -29,6 +29,9 @@ sphinx-click = "*"
 zipp = "*"
 certifi = "*"
 pre-commit = "*"
+types-setuptools = "==69.2.0.20240317"
+isort = "==5.13.2"
+blacken-docs = "==1.16.0"
 
 [requires]
 python_version = "3.9"
