--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   lint-python:
-    name: Lint Python code
+    name: Lint and format with pre-commit
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,45 +17,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-          cache: 'pipenv'
 
-      - id: install-pipenv
-        name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-
-      - id: install-python-dependencies
-        name: Install Python dependencies
-        run: pipenv install --dev
-
-      - id: lint
-        name: Lint
-        run: make lint
-
-  mypy-python:
-    name: Static type check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - id: install-python
-        name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-          cache: 'pipenv'
-
-      - id: install-pipenv
-        name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-
-      - id: install-python-dependencies
-        name: Install Python dependencies
-        run: pipenv install --dev
-
-      - id: mypy
-        name: Mypy
-        run: make mypy
+      - id: pre-commit
+        name: Pre-commit
+        uses: pre-commit/action@v3.0.1
 
   test-python:
     strategy:
