--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,7 @@ repos:
     rev: 5.11.5
     hooks:
     -   id: isort
+        args: ["--profile", "black"]
         language_version: python3
 
 -   repo: https://github.com/PyCQA/flake8
