--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ pytest-vcr = "*"
 pytest-cov = "*"
 mypy = "==1.9.0"
 twine = "*"
-setuptools-scm = "*"
+setuptools-scm = "==8.1.0"
 sphinx = "*"
 sphinx-autobuild = "*"
 myst-parser = "*"
