--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -47,7 +47,7 @@ jobs:
         name: Install Python dependencies
         run: |
           # pipenv install --python `which python` pytest pytest-vcr bln click jellyfish requests certifi importlib_metadata
-          pipenv install --python `which python`
+          pipenv install --python `which python` --dev
           pipenv run pip install certifi importlib_metadata
         shell: bash
 
