Try to fix urllib3 vs. pyvcr problem

--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,8 @@ pre-commit = "*"
 isort = "==5.11.5"
 blacken-docs = "==1.15.0"
 pytest = "*"
+urllib3 = "<2.0.0"
+vcrpy = "==4.2.0"
 
 [requires]
 python_version = "3.9"
