--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ click = "8.1.3"       # https://github.com/pallets/click/issues/2558
 jellyfish = "*"
 marshmallow = "==3.26.1"     # https://github.com/biglocalnews/warn-github-flow/issues/31
 bln = "==2.3.11"
+retry2 = "*"
 
 [dev-packages]
 flake8 = "==6.1.0"
