--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v6.0.0
     hooks:
     -   id: trailing-whitespace
         language_version: python3
@@ -13,7 +13,7 @@ repos:
     -   id: check-added-large-files
         language_version: python3
         args: ['--maxkb=15000']
-    -   id: check-byte-order-marker
+    -   id: fix-byte-order-marker
         language_version: python3
     -   id: check-case-conflict
         language_version: python3
