--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
         language_version: python3
+        exclude: \.csv$
     -   id: end-of-file-fixer
         language_version: python3
     -   id: check-yaml
