--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - id: install-python
         name: Install Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.9'
+          python-version: '3.14'
 
       - id: pre-commit
         name: Pre-commit
@@ -25,16 +25,16 @@ jobs:
   test-python:
     strategy:
       matrix:
-        python: ["3.9", "3.10",]
+        python: ["3.14",]
     name: Test Python code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - id: install-python
         name: Install Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python }}
           cache: 'pipenv'
@@ -51,11 +51,11 @@ jobs:
           pipenv run pip install certifi importlib_metadata
         shell: bash
 
-#      - id: run
-#        name: Run tests
-#        run: make test-on-ci
-#        env:
-#            BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
+      - id: run
+        name: Run tests
+        run: make test-on-ci
+        env:
+            BLN_API_TOKEN: ${{ secrets.BLN_API_TOKEN }}
 
   build:
     name: Build Python package
@@ -63,13 +63,13 @@ jobs:
     needs: [test-python]
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - id: install-python
         name: Install Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.9'
+          python-version: '3.14'
           cache: 'pipenv'
 
       - id: install-pipenv
@@ -92,7 +92,7 @@ jobs:
 
       - id: save
         name: Save artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: release-${{ github.run_number }}
           path: ./dist
@@ -109,13 +109,13 @@ jobs:
       id-token: 'write'
 
     steps:
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v6
         with:
-          python-version: '3.9'
+          python-version: '3.14'
 
       - id: fetch
         name: Fetch artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: release-${{ github.run_number }}
           path: ./dist
