--- a/Pipfile
+++ b/Pipfile
@@ -4,37 +4,36 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "8.1.3"       # https://github.com/pallets/click/issues/2558
+click = "*"       # https://github.com/pallets/click/issues/2558
 jellyfish = "*"
-marshmallow = "==3.26.1"     # https://github.com/biglocalnews/warn-github-flow/issues/31
-bln = "==2.3.11"
+# marshmallow = "==3.26.1"     # https://github.com/biglocalnews/warn-github-flow/issues/31
+bln = "*"
 retry2 = "*"
-vcrpy = "==7.0.0"
+vcrpy = "*"
 
 [dev-packages]
-flake8 = "==6.1.0"
-black = "==24.3.0"
+flake8 = "*"
+black = "*"
 flake8-bugbear = "*"
 flake8-docstrings = "*"
 pytest-vcr = "*"
 pytest-cov = "*"
-mypy = "==1.9.0"
+mypy = ""
 twine = "*"
-setuptools-scm = "==8.1.0"
+setuptools-scm = "*"
 sphinx = "*"
 sphinx-autobuild = "*"
 myst-parser = "*"
-sphinxcontrib-napoleon = "*"
 types-requests = "*"
 sphinx-click = "*"
 zipp = "*"
 certifi = "*"
 pre-commit = "*"
-isort = "==5.11.5"
-blacken-docs = "==1.15.0"
+isort = "*"
+blacken-docs = "*"
 pytest = "*"
-urllib3 = "<2.0.0"
-vcrpy = "==4.1.1"
+urllib3 = "*"
+vcrpy = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.14"
