--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ flake8-bugbear = "*"
 flake8-docstrings = "*"
 pytest-vcr = "*"
 pytest-cov = "*"
-mypy = ""
+mypy = "*"
 twine = "*"
 setuptools-scm = "*"
 sphinx = "*"
