--- a/Pipfile
+++ b/Pipfile
@@ -4,36 +4,35 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "*"       # https://github.com/pallets/click/issues/2558
-jellyfish = "*"
-# marshmallow = "==3.26.1"     # https://github.com/biglocalnews/warn-github-flow/issues/31
 bln = "*"
+click = "*"
+jellyfish = "*"
+marshmallow = "*"
 retry2 = "*"
-vcrpy = "*"
 
 [dev-packages]
-flake8 = "*"
 black = "*"
+blacken-docs = "*"
+certifi = "*"
+flake8 = "*"
 flake8-bugbear = "*"
 flake8-docstrings = "*"
-pytest-vcr = "*"
-pytest-cov = "*"
+isort = "*"
 mypy = "*"
-twine = "*"
+myst-parser = "*"
+pre-commit = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-vcr = "*"
 setuptools-scm = "*"
 sphinx = "*"
 sphinx-autobuild = "*"
-myst-parser = "*"
-types-requests = "*"
 sphinx-click = "*"
-zipp = "*"
-certifi = "*"
-pre-commit = "*"
-isort = "*"
-blacken-docs = "*"
-pytest = "*"
+twine = "*"
+types-requests = "*"
 urllib3 = "*"
 vcrpy = "*"
+zipp = "*"
 
 [requires]
 python_version = "3.14"
