--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,23 +6,25 @@ build-backend = "setuptools.build_meta"
 name = "warn-transformer"
 description = "Consolidate, enrich and analyze the data gathered by warn-scraper"
 authors = [
-    {name = "Big Local News", email = "biglocalnews@stanford.edu"}
+  { name = "Big Local News", email = "biglocalnews@stanford.edu" }
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
 keywords = ["WARN Act", "scrapers", "WARN Act data", "WARN Act scrapers"]
 license = "Apache-2.0"
 classifiers = [
-    "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3"
 ]
 dependencies = [
-    "bln",
-    "click",
-    "jellyfish",
-    "marshmallow",
+  "bln",
+  "click",
+  "jellyfish",
+  "marshmallow"
 ]
-
 dynamic = ["version"]
+
+[project.scripts]
+warn-transformer = "warn_transformer.cli:cli"
 
 [project.urls]
 "Documentation" = "https://warn-transformer.readthedocs.io"
@@ -30,22 +32,7 @@ dynamic = ["version"]
 "Source" = "https://github.com/biglocalnews/warn-transformer"
 "Tracker" = "https://github.com/biglocalnews/warn-transformer/issues"
 
-
-[project.scripts]
-warn-transformer = "warn_transformer.cli:cli"
-
-# [project.authors]
-
-
 [tool.setuptools_scm]
 
-
-# [project.optional-dependencies]
-# pdf = ["ReportLab>=1.2", "RXP"]
-# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
-
-# [project.scripts]
-# my-script = "my_package.module:function"
-
 # ... other project metadata fields as listed in:
-#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
+# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
